--- a/css/styles.css
+++ b/css/styles.css
@@ -11555,8 +11555,8 @@ html {
 }
 
 .bg-gradient-primary-to-secondary {
-  background: #1e30f3;
-  background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%);
+  background: #feada6;
+  background-image: linear-gradient(to top, #feada6 0%, #f5efef 100%);
 }
 
 .text-gradient {
@@ -11611,7 +11611,7 @@ html {
   top: 6.05vw;
 }
 .profile .dots-2 svg {
-  fill: #1e30f3;
+  fill: #feada6;
 }
 .profile .dots-3 {
   position: absolute;
@@ -11629,7 +11629,7 @@ html {
   bottom: 4vw;
 }
 .profile .dots-4 svg {
-  fill: #1e30f3;
+  fill: #feada6;
 }
 
 @media (min-width: 576px) {
